--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -3,7 +3,7 @@ name: Generate Datas
 on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
-  workflow_dispatch:
+  workflows_dispatch:
 
 jobs:
   build:
