--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,5 +1,5 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions
-theme: dracula
+color: black
 
 name: Generate Snake
 
