--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,6 +12,10 @@ on:
 
 # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
+  
+  push:
+    branches:
+    - master
 
 # The sequence of runs in this workflow:
 jobs:
